@@ -15,7 +15,7 @@
 #include "object-key.hh"
 #include "std-string.hh"
 
-class Book : public Input
+class Book
 {
   DECLARE_SMOBS (Book, foo);
 
@@ -24,8 +24,11 @@ public:
   SCM header_;
   Output_def *paper_;
   SCM scores_;
+  SCM input_location_;
 
-  Book *clone () const;
+  Book (Book const &);
+  Input *origin() const;
+  VIRTUAL_COPY_CONSTRUCTOR(Book, Book);
   Book ();
   void add_score (SCM);
   Paper_book *process (Output_def *def_paper,
