@@ -10,7 +10,7 @@
 
 #include "main.hh"
 #include "font-metric.hh"
-#include "input-smob.hh"
+#include "input.hh"
 #include "string-convert.hh"
 #include "warn.hh"
 
